Wrapping the header for smaller devices

--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
           alt="Picture of restaurant"
           class="img-responsive visible-xs"
         />
-        <h2 id="jumbotran-main-text" class="visible-lg visible-md">
+        <h2 id="jumbotran-main-text" class="visible-lg visible-md visible-sm">
           Sweetening lives since 1984
         </h2>
-        <h3 id="jumbotran-sub-text" class="visible-lg visible-md">
+
+        <h3 id="jumbotran-sub-text" class="visible-lg visible-md>
           <i class="fa fa-truck service-icon"></i>
           <p>Prompt Door Delivery</p>
           <i class="fa fa-coffee service-icon"></i>
