Wrapping the header for smaller devices

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           Sweetening lives since 1984
         </h2>
 
-        <h3 id="jumbotran-sub-text" class="visible-lg visible-md>
+        <h3 id="jumbotran-sub-text" class="visible-lg visible-md">
           <i class="fa fa-truck service-icon"></i>
           <p>Prompt Door Delivery</p>
           <i class="fa fa-coffee service-icon"></i>
