--- a/sweet-categories.html
+++ b/sweet-categories.html
@@ -113,8 +113,8 @@
     <div id="main-content" class="container">
       <h2 id="menu-categories-title" class="text-center">Sweet Categories</h2>
       <div class="text-center">
-        Availability of fruit based bevarages are seasonal as they are made from
-        fresh fruits.
+        Availability of fruit based sweets and savouries are subject to
+        seasonality of ingredients.
       </div>
       <section class="row">
         <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
