--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Libre+Bodoni&family=Lora&family=Mukta&family=Oxygen&family=Source+Serif+Pro&family=Tiro+Kannada&display=swap"
       rel="stylesheet"
     />
+    <script src="js/httpcall.js" type="text/javascript"></script>
   </head>
   <body>
     <header>
@@ -41,8 +42,8 @@
                 href="index.html"
                 class="pull-right visible-md visible-lg visible-xs visible-sm"
                 id="a-element-behind-brandname"
-                ><h1>Archana Sweets</h1></a
-              >
+                ><h1 id="element-behind-brandname"></h1
+              ></a>
               <p>
                 <!--<img src="img/x.jpg" alt="sub text" />-->
               </p>
@@ -92,8 +93,10 @@
                 >
               </li>
               <li id="phone" class="hidden-xs hidden-sm">
-                <a href="tel:044-24344440"> <span>044-24344440</span></a>
-                <div>Call us for home delivery</div>
+                <a href="tel:044-24344440">
+                  <span id="telephoneNumber1"></span
+                ></a>
+                <div id="telephoneNumberText1"></div>
               </li>
             </ul>
             <!-- #nav-list -->
@@ -106,12 +109,13 @@
     <div id="contact-region">
       <div id="call-btn" class="visible-xs visible-sm">
         <a class="btn" href="tel:044-24344440"
-          ><span class="glyphicon glyphicon-earphone"></span>044-24344440</a
-        >
+          ><span
+            class="glyphicon glyphicon-earphone"
+            id="telephoneNumber2"
+          ></span
+        ></a>
       </div>
-      <div id="xs-deliver" class="text-center visible-xs visible-sm">
-        Call us for home delivery
-      </div>
+      <div id="xs-deliver" class="text-center visible-xs visible-sm"></div>
     </div>
     <div id="main-content" class="container">
       <div class="jumbotron">
@@ -121,31 +125,33 @@
           alt="Picture of restaurant"
           class="img-responsive visible-xs"
         />
-        <h2 id="jumbotran-main-text" class="visible-lg visible-md visible-sm">
-          Sweetening lives since 1984
-        </h2>
+        <h2
+          id="jumbotran-main-text"
+          class="visible-lg visible-md visible-sm"
+        ></h2>
 
         <h3 id="jumbotran-sub-text" class="visible-lg visible-md">
           <i class="fa fa-truck service-icon"></i>
-          <p>Prompt Door Delivery</p>
+          <p id="jumbotran-sub-text1"></p>
           <i class="fa fa-coffee service-icon"></i>
-          <p>Freshly Made Foods</p>
+          <p id="jumbotran-sub-text2"></p>
           <i class="fa fa-award service-icon"></i>
-          <p>A hygenic indulgence</p>
+          <p id="jumbotran-sub-text3"></p>
           <i class="fa fa-table service-icon"></i>
-          <p>Online Order Booking</p>
+          <p id="jumbotran-sub-text4"></p>
         </h3>
       </div>
       <div id="home-tiles" class="row">
         <div class="col-md-4 col-sm-6 col-xs-12">
           <a href="sweet-categories.html"
-            ><div id="menu-tile"><span>Sweets</span></div></a
-          >
+            ><div id="menu-tile"><span id="menu-tile-text"></span></div
+          ></a>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
           <a href="savouries-categories.html"
-            ><div id="specials-tile"><span>Savouries</span></div></a
-          >
+            ><div id="specials-tile">
+              <span id="specials-tile-text"></span></div
+          ></a>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
           <a href="https://goo.gl/maps/6bSQUcCFTbujkNzf7" target="_blank">
@@ -158,7 +164,7 @@
                 style="border: 0"
                 allowfullscreen
               ></iframe>
-              <span>map</span>
+              <span id="map-tile-text"></span>
             </div>
           </a>
         </div>
@@ -217,6 +223,5 @@
       integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
       crossorigin="anonymous"
     ></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
